--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
 name = "void" # the name of the package
 version = "0.1.0"    # the current version, obeying semver
-authors = ["Nikhil Kowshi <contact@nikhilkowshik.com>"]
+authors = ["Nikhil Kowshik <contact@nikhilkowshik.com>"]
